--- a/2-Express-Intro/package.json
+++ b/2-Express-Intro/package.json
@@ -15,6 +15,7 @@
   "author": "SkillSafari",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "nodemon": "^2.0.19"
   }
 }
