--- a/2-Express-Intro/9-http-methods/package.json
+++ b/2-Express-Intro/9-http-methods/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "uid": "^2.0.0"
   }
 }
